WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284465
REGRESSION (
285606@main
): [visionOS] "Sign in with Google" pop-up is unexpectedly in dark mode
https://bugs.webkit.org/show_bug.cgi?id=284465
Summary
REGRESSION (285606@main): [visionOS] "Sign in with Google" pop-up is unexpect...
Aditya Keerthi
Reported
2024-12-11 08:54:23 PST
rdar://140862101
Attachments
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2024-12-11 09:02:21 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37778
EWS
Comment 2
2024-12-11 13:44:09 PST
Committed
287694@main
(e0fe6971e0ff): <
https://commits.webkit.org/287694@main
> Reviewed commits have been landed. Closing PR #37778 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug